--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
 # Profile information
-name: Fresh
-title: Fresh - Free Jekyll Theme
+name: Alex's Music Club
+title: Alex's Music CLub
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A music-sharing website based on the jekyll theme "fresh". Found by Jiawei Chen.
+  基于Jekyll的音乐分享网站，由陈嘉纬创建于2021.
+
 permalink: ':title/'
 baseurl: "/fresh" # the subpath of your site, e.g. /blog
 url: "artemsheludko.pw" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Social
-facebook: #Add your Facebook
-twitter: #Add your Twitter
-google-plus: #Add your Google+
-github: #Add your Github
+github: AlexJWC
+bilibili: LINKJW
+QQ: 3087534304
+twitter: LINKJW4
 
 # Contact form
-email: #your-email@domain.com
+email: 13336039319@163.com
 
 # Comments
 discus-identifier: # Add your Disqus identifier
