--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
+#Google Analytics
+google_analytics: G-8VLQWVZSX8
+  # your google analytics
+
 # Profile information
 name: Alex's Music Club
 title: Alex's Music CLub
