--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 google_analytics: G-8VLQWVZSX8
 
 # Profile information
-name: Alex's Music Club
-title: Alex's Music CLub
+name: AXMC
+title: AXMC
 description: > # this means to ignore newlines until "baseurl:"
   A music-sharing website based on the jekyll theme "fresh". Found by Jiawei Chen.
   基于Jekyll的音乐分享网站，由陈嘉纬创建于2021.
